--- a/src/html/blocks/products.html
+++ b/src/html/blocks/products.html
@@ -9,8 +9,8 @@
             <!-- ================== SLIDER ================== -->
             <div class="products-slider swiper swiper-products">
 
-                <button class="products-slider__btn swiper__btn--prev" aria-label="Previous slide"><</button>
-                <button class="products-slider__btn swiper__btn--next" aria-label="Next slide">></button>
+                <button class="products-slider__btn swiper__btn--prev" aria-label="Previous slide">&lt;</button>
+                <button class="products-slider__btn swiper__btn--next" aria-label="Next slide">&gt;</button>
                 
                 <div class="products-slider__wrapper swiper-wrapper">
 
